--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@primevue/themes": "^4.1.1",
+    "axios": "^1.7.7",
+    "primevue": "^4.1.1",
     "vue": "^3.5.12"
   },
   "devDependencies": {
